@@ -1,20 +1,11 @@
 package me.realized.duels;
 
 import com.google.common.collect.Lists;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.logging.Level;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import me.realized.duels.api.Duels;
 import me.realized.duels.api.command.SubCommand;
 import me.realized.duels.arena.ArenaManagerImpl;
 import me.realized.duels.betting.BettingManager;
-import me.realized.duels.command.commands.SpectateCommand;
 import me.realized.duels.command.commands.duel.DuelCommand;
 import me.realized.duels.command.commands.duels.DuelsCommand;
 import me.realized.duels.command.commands.queue.QueueCommand;
@@ -62,6 +53,14 @@ import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.scheduler.BukkitTask;
 import org.jetbrains.annotations.NotNull;
 
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.logging.Level;
+
 public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
 
     private static final int BSTATS_ID = 2696;
@@ -72,8 +71,9 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
     private static DuelsPlugin instance;
 
     private final List<Loadable> loadables = new ArrayList<>();
+    private final Map<String, AbstractCommand<DuelsPlugin>> commands = new HashMap<>();
+    private final List<Listener> registeredListeners = new ArrayList<>();
     private int lastLoad;
-
     @Getter
     private LogManager logManager;
     @Getter
@@ -112,10 +112,6 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
     private Teleport teleport;
     @Getter
     private ExtensionManager extensionManager;
-
-    private final Map<String, AbstractCommand<DuelsPlugin>> commands = new HashMap<>();
-    private final List<Listener> registeredListeners = new ArrayList<>();
-
     @Getter
     private volatile boolean updateAvailable;
     @Getter
@@ -129,7 +125,7 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
 
         try {
             logManager = new LogManager(this);
-        } catch (IOException ex) {
+        } catch (final IOException ex) {
             Log.error("Could not load LogManager. Please contact the developer.");
 
             // Manually print the stacktrace since Log#error only prints errors to non-plugin log sources.
@@ -143,7 +139,7 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
 
         try {
             Class.forName("org.spigotmc.SpigotConfig");
-        } catch (ClassNotFoundException ex) {
+        } catch (final ClassNotFoundException ex) {
             Log.error("================= *** DUELS LOAD FAILURE *** =================");
             Log.error("Duels requires a spigot server to run, but this server was not running on spigot!");
             Log.error("To run your server on spigot, follow this guide: " + SPIGOT_INSTALLATION_URL);
@@ -227,10 +223,9 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
      */
     private boolean load() {
         registerCommands(
-            new DuelCommand(this),
-            new QueueCommand(this),
-            new SpectateCommand(this),
-            new DuelsCommand(this)
+                new DuelCommand(this),
+                new QueueCommand(this),
+                new DuelsCommand(this)
         );
 
         for (final Loadable loadable : loadables) {
@@ -242,7 +237,7 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
                 loadable.handleLoad();
                 logManager.debug(name + " has been loaded. (took " + (System.currentTimeMillis() - now) + "ms)");
                 lastLoad = loadables.indexOf(loadable);
-            } catch (Exception ex) {
+            } catch (final Exception ex) {
                 // Handles the case of exceptions from LogManager not being logged in file
                 if (loadable instanceof LogSource) {
                     ex.printStackTrace();
@@ -263,10 +258,9 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
         registeredListeners.forEach(HandlerList::unregisterAll);
         registeredListeners.clear();
         // Unregister all extension listeners that isn't using the method Duels#registerListener
-        HandlerList.getRegisteredListeners(this)
-            .stream()
-            .filter(listener -> listener.getListener().getClass().getClassLoader().getClass().isAssignableFrom(ExtensionClassLoader.class))
-            .forEach(listener -> HandlerList.unregisterAll(listener.getListener()));
+        HandlerList.getRegisteredListeners(this).stream()
+                .filter(listener -> listener.getListener().getClass().getClassLoader().getClass().isAssignableFrom(ExtensionClassLoader.class))
+                .forEach(listener -> HandlerList.unregisterAll(listener.getListener()));
         commands.clear();
 
         for (final Loadable loadable : Lists.reverse(loadables)) {
@@ -281,7 +275,7 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
                 logManager.debug("Starting unload of " + name + " at " + now);
                 loadable.handleUnload();
                 logManager.debug(name + " has been unloaded. (took " + (System.currentTimeMillis() - now) + "ms)");
-            } catch (Exception ex) {
+            } catch (final Exception ex) {
                 Log.error("There was an error while unloading " + name + "! If you believe this is an issue from the plugin, please contact the developer.", ex);
                 return false;
             }
@@ -309,7 +303,7 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
             return false;
         }
 
-        result.child(new AbstractCommand<DuelsPlugin>(this, subCommand) {
+        result.child(new AbstractCommand<>(this, subCommand) {
             @Override
             protected void execute(final CommandSender sender, final String label, final String[] args) {
                 subCommand.execute(sender, label, args);
@@ -347,10 +341,10 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
             unloaded = true;
             loadable.handleLoad();
             return true;
-        } catch (Exception ex) {
+        } catch (final Exception ex) {
             Log.error("There was an error while " + (unloaded ? "loading " : "unloading ")
-                + loadable.getClass().getSimpleName()
-                + "! If you believe this is an issue from the plugin, please contact the developer.", ex);
+                    + loadable.getClass().getSimpleName()
+                    + "! If you believe this is an issue from the plugin, please contact the developer.", ex);
             return false;
         }
     }
@@ -428,14 +422,17 @@ public class DuelsPlugin extends JavaPlugin implements Duels, LogSource {
     }
 
     public Loadable find(final String name) {
-        return loadables.stream().filter(loadable -> loadable.getClass().getSimpleName().equalsIgnoreCase(name)).findFirst().orElse(null);
+        return loadables.stream()
+                .filter(loadable -> loadable.getClass().getSimpleName().equalsIgnoreCase(name))
+                .findFirst()
+                .orElse(null);
     }
 
     public List<String> getReloadables() {
         return loadables.stream()
-            .filter(loadable -> loadable instanceof Reloadable)
-            .map(loadable -> loadable.getClass().getSimpleName())
-            .collect(Collectors.toList());
+                .filter(Reloadable.class::isInstance)
+                .map(loadable -> loadable.getClass().getSimpleName())
+                .toList();
     }
 
     @Override
