@@ -1,8 +1,5 @@
 package me.realized.duels.command;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.stream.Collectors;
 import me.realized.duels.DuelsPlugin;
 import me.realized.duels.arena.ArenaManagerImpl;
 import me.realized.duels.betting.BettingManager;
@@ -21,6 +18,9 @@ import me.realized.duels.setting.SettingsManager;
 import me.realized.duels.spectate.SpectateManagerImpl;
 import me.realized.duels.util.command.AbstractCommand;
 import org.bukkit.command.CommandSender;
+
+import java.util.Collection;
+import java.util.List;
 
 public abstract class BaseCommand extends AbstractCommand<DuelsPlugin> {
 
@@ -45,7 +45,7 @@ public abstract class BaseCommand extends AbstractCommand<DuelsPlugin> {
      * Constructor for a sub command
      */
     protected BaseCommand(final DuelsPlugin plugin, final String name, final String usage, final String description, final String permission, final int length,
-        final boolean playerOnly, final String... aliases) {
+                          final boolean playerOnly, final String... aliases) {
         super(plugin, name, usage, description, permission, length, playerOnly, aliases);
         this.plugin = plugin;
         this.config = plugin.getConfiguration();
@@ -69,7 +69,7 @@ public abstract class BaseCommand extends AbstractCommand<DuelsPlugin> {
      * Constructor for a sub command, inherits parent permission
      */
     protected BaseCommand(final DuelsPlugin plugin, final String name, final String usage, final String description, final int length, final boolean playerOnly,
-        final String... aliases) {
+                          final String... aliases) {
         this(plugin, name, usage, description, null, length, playerOnly, aliases);
     }
 
@@ -83,25 +83,17 @@ public abstract class BaseCommand extends AbstractCommand<DuelsPlugin> {
     @Override
     protected void handleMessage(final CommandSender sender, final MessageType type, final String... args) {
         switch (type) {
-            case PLAYER_ONLY:
-                super.handleMessage(sender, type, args);
-                break;
-            case NO_PERMISSION:
-                lang.sendMessage(sender, "ERROR.no-permission", "permission", args[0]);
-                break;
-            case SUB_COMMAND_INVALID:
-                lang.sendMessage(sender, "ERROR.command.invalid-sub-command", "command", args[0], "argument", args[1]);
-                break;
-            case SUB_COMMAND_USAGE:
-                lang.sendMessage(sender, "COMMAND.sub-command-usage", "command", args[0], "usage", args[1], "description", args[2]);
-                break;
+            case PLAYER_ONLY -> super.handleMessage(sender, type, args);
+            case NO_PERMISSION -> lang.sendMessage(sender, "ERROR.no-permission", "permission", args[0]);
+            case SUB_COMMAND_INVALID -> lang.sendMessage(sender, "ERROR.command.invalid-sub-command", "command", args[0], "argument", args[1]);
+            case SUB_COMMAND_USAGE -> lang.sendMessage(sender, "COMMAND.sub-command-usage", "command", args[0], "usage", args[1], "description", args[2]);
         }
     }
 
     protected List<String> handleTabCompletion(final String argument, final Collection<String> collection) {
         return collection.stream()
-            .filter(value -> value.toLowerCase().startsWith(argument.toLowerCase()))
-            .map(value -> value.replace(" ", "-"))
-            .collect(Collectors.toList());
+                .filter(value -> value.toLowerCase().startsWith(argument.toLowerCase()))
+                .map(value -> value.replace(" ", "-"))
+                .toList();
     }
 }
