@@ -1,32 +1,28 @@
 package me.realized.duels.data;
 
+import me.realized.duels.player.PlayerInfo;
+import me.realized.duels.util.Log;
+import org.bukkit.inventory.ItemStack;
+
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
-import me.realized.duels.player.PlayerInfo;
-import me.realized.duels.util.Log;
-import org.bukkit.inventory.ItemStack;
 
 public class PlayerData {
 
-    private static transient final String ITEM_LOAD_FAILURE = "Could not load item %s!";
-
-    public static PlayerData fromPlayerInfo(final PlayerInfo info) {
-        return new PlayerData(info);
-    }
-
-    private Map<String, Map<Integer, ItemData>> items = new HashMap<>();
-    private Collection<PotionEffectData> effects = new ArrayList<>();
+    private static final String ITEM_LOAD_FAILURE = "Could not load item %s!";
+    private final Map<String, Map<Integer, ItemData>> items = new HashMap<>();
+    private final Collection<PotionEffectData> effects = new ArrayList<>();
+    private final List<ItemData> extra = new ArrayList<>();
     private double health;
     private int hunger;
     private LocationData location;
-    private List<ItemData> extra = new ArrayList<>();
 
-    private PlayerData() {}
+    private PlayerData() {
+    }
 
     private PlayerData(final PlayerInfo info) {
         this.health = info.getHealth();
@@ -35,22 +31,28 @@ public class PlayerData {
 
         for (final Map.Entry<String, Map<Integer, ItemStack>> entry : info.getItems().entrySet()) {
             final Map<Integer, ItemData> data = new HashMap<>();
-            entry.getValue().entrySet()
-                .stream()
-                .filter(value -> Objects.nonNull(value.getValue()))
-                .forEach(value -> data.put(value.getKey(), ItemData.fromItemStack(value.getValue())));
+            entry.getValue().entrySet().stream()
+                    .filter(value -> Objects.nonNull(value.getValue()))
+                    .forEach(value -> data.put(value.getKey(), ItemData.fromItemStack(value.getValue())));
             items.put(entry.getKey(), data);
         }
 
         info.getExtra().forEach(item -> extra.add(ItemData.fromItemStack(item)));
     }
 
+    public static PlayerData fromPlayerInfo(final PlayerInfo info) {
+        return new PlayerData(info);
+    }
+
     public PlayerInfo toPlayerInfo() {
         final PlayerInfo info = new PlayerInfo(
-            effects.stream().map(PotionEffectData::toPotionEffect).filter(Objects::nonNull).collect(Collectors.toList()),
-            health,
-            hunger,
-            location.toLocation()
+                effects.stream()
+                        .map(PotionEffectData::toPotionEffect)
+                        .filter(Objects::nonNull)
+                        .toList(),
+                health,
+                hunger,
+                location.toLocation()
         );
 
         for (final Map.Entry<String, Map<Integer, ItemData>> entry : items.entrySet()) {
@@ -59,7 +61,7 @@ public class PlayerData {
                 final ItemStack item = itemData.toItemStack(false);
 
                 if (item == null) {
-                    Log.warn(String.format(ITEM_LOAD_FAILURE, itemData.toString()));
+                    Log.warn(String.format(ITEM_LOAD_FAILURE, itemData));
                     return;
                 }
 
@@ -68,7 +70,10 @@ public class PlayerData {
             info.getItems().put(entry.getKey(), data);
         }
 
-        info.getExtra().addAll(extra.stream().map(data -> data.toItemStack(false)).filter(Objects::nonNull).collect(Collectors.toList()));
+        info.getExtra().addAll(extra.stream()
+                .map(data -> data.toItemStack(false))
+                .filter(Objects::nonNull)
+                .toList());
         return info;
     }
 }
