@@ -3,14 +3,6 @@ package me.realized.duels.spectate;
 import com.google.common.collect.HashMultimap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Multimap;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.UUID;
-import java.util.stream.Collectors;
 import me.realized.duels.DuelsPlugin;
 import me.realized.duels.Permissions;
 import me.realized.duels.api.arena.Arena;
@@ -51,6 +43,14 @@ import org.bukkit.potion.PotionEffectType;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.UUID;
+
 public class SpectateManagerImpl implements Loadable, SpectateManager {
 
     private final DuelsPlugin plugin;
@@ -65,7 +65,9 @@ public class SpectateManagerImpl implements Loadable, SpectateManager {
     private final Multimap<Arena, SpectatorImpl> arenas = HashMultimap.create();
 
     private Teleport teleport;
+    @Nullable
     private MyPetHook myPet;
+    @Nullable
     private EssentialsHook essentials;
 
     public SpectateManagerImpl(final DuelsPlugin plugin) {
@@ -139,17 +141,16 @@ public class SpectateManagerImpl implements Loadable, SpectateManager {
         final MatchImpl match = arena.getMatch();
 
         // Hide from players in match
-        if (match != null && !essentials.isVanished(player)) {
-            match.getAllPlayers()
-                .stream()
-                .filter(arenaPlayer -> arenaPlayer.isOnline() && arenaPlayer.canSee(player))
-                .forEach(arenaPlayer -> {
-                    if (CompatUtil.hasHidePlayer()) {
-                        arenaPlayer.hidePlayer(plugin, player);
-                    } else {
-                        arenaPlayer.hidePlayer(player);
-                    }
-                });
+        if (match != null && !(essentials != null && essentials.isVanished(player))) {
+            match.getAllPlayers().stream()
+                    .filter(arenaPlayer -> arenaPlayer.isOnline() && arenaPlayer.canSee(player))
+                    .forEach(arenaPlayer -> {
+                        if (CompatUtil.hasHidePlayer()) {
+                            arenaPlayer.hidePlayer(plugin, player);
+                        } else {
+                            arenaPlayer.hidePlayer(player);
+                        }
+                    });
         }
 
         // Remove pet before teleport
@@ -176,17 +177,17 @@ public class SpectateManagerImpl implements Loadable, SpectateManager {
 
         if (CompatUtil.hasSetCollidable()) {
             player.setCollidable(false);
-        } else {
-            player.spigot().setCollidesWithEntities(false);
         }
 
         if (config.isSpecAddInvisibilityEffect()) {
             player.addPotionEffect(new PotionEffect(PotionEffectType.INVISIBILITY, Integer.MAX_VALUE, 1, false, false));
         }
 
-        // Broadcast to the arena that player has begun spectating if player does not have the SPEC_ANON permission.
+        // Broadcast to the arena that player has begun spectating if player does not
+        // have the SPEC_ANON permission.
         if (!player.hasPermission(Permissions.SPEC_ANON)) {
-            arena.getMatch().getAllPlayers().forEach(matchPlayer -> lang.sendMessage(matchPlayer, "SPECTATE.arena-broadcast", "name", player.getName()));
+            arena.getMatch().getAllPlayers().forEach(
+                    matchPlayer -> lang.sendMessage(matchPlayer, "SPECTATE.arena-broadcast", "name", player.getName()));
         }
 
         return Result.SUCCESS;
@@ -195,7 +196,7 @@ public class SpectateManagerImpl implements Loadable, SpectateManager {
     /**
      * Puts player out of spectator mode.
      *
-     * @param player Player to put out of spectator mode
+     * @param player    Player to put out of spectator mode
      * @param spectator {@link SpectatorImpl} instance associated to this player
      */
     public void stopSpectating(final Player player, final SpectatorImpl spectator) {
@@ -208,8 +209,6 @@ public class SpectateManagerImpl implements Loadable, SpectateManager {
 
         if (CompatUtil.hasSetCollidable()) {
             player.setCollidable(true);
-        } else {
-            player.spigot().setCollidesWithEntities(true);
         }
 
         final PlayerInfo info = playerManager.remove(player);
@@ -224,17 +223,16 @@ public class SpectateManagerImpl implements Loadable, SpectateManager {
         final MatchImpl match = spectator.getArena().getMatch();
 
         // Show to players in match
-        if (match != null && !essentials.isVanished(player)) {
-            match.getAllPlayers()
-                .stream()
-                .filter(Player::isOnline)
-                .forEach(arenaPlayer -> {
-                    if (CompatUtil.hasHidePlayer()) {
-                        arenaPlayer.showPlayer(plugin, player);
-                    } else {
-                        arenaPlayer.showPlayer(player);
-                    }
-                });
+        if (match != null && !(essentials != null && essentials.isVanished(player))) {
+            match.getAllPlayers().stream()
+                    .filter(Player::isOnline)
+                    .forEach(arenaPlayer -> {
+                        if (CompatUtil.hasHidePlayer()) {
+                            arenaPlayer.showPlayer(plugin, player);
+                        } else {
+                            arenaPlayer.showPlayer(player);
+                        }
+                    });
         }
 
         final SpectateEndEvent event = new SpectateEndEvent(player, spectator);
@@ -288,10 +286,9 @@ public class SpectateManagerImpl implements Loadable, SpectateManager {
     }
 
     public Collection<Player> getAllSpectators() {
-        return spectators.values()
-            .stream()
-            .map(spectator -> Bukkit.getPlayer(spectator.getUuid()))
-            .collect(Collectors.toList());
+        return spectators.values().stream()
+                .map(spectator -> Bukkit.getPlayer(spectator.getUuid()))
+                .toList();
     }
 
     private class SpectateListener implements Listener {
@@ -318,7 +315,8 @@ public class SpectateManagerImpl implements Loadable, SpectateManager {
 
             final String command = event.getMessage().substring(1).split(" ")[0].toLowerCase();
 
-            if (command.equalsIgnoreCase("spectate") || command.equalsIgnoreCase("spec") || config.getSpecWhitelistedCommands().contains(command)) {
+            if (command.equalsIgnoreCase("spectate") || command.equalsIgnoreCase("spec")
+                    || config.getSpecWhitelistedCommands().contains(command)) {
                 return;
             }
 
@@ -338,7 +336,6 @@ public class SpectateManagerImpl implements Loadable, SpectateManager {
             event.setCancelled(true);
             lang.sendMessage(player, "SPECTATE.prevent.teleportation");
         }
-
 
         @EventHandler(ignoreCancelled = true)
         public void on(final PlayerInteractEvent event) {
@@ -364,7 +361,8 @@ public class SpectateManagerImpl implements Loadable, SpectateManager {
 
             if (event.getDamager() instanceof Player) {
                 player = (Player) event.getDamager();
-            } else if (event.getDamager() instanceof Projectile && ((Projectile) event.getDamager()).getShooter() instanceof Player) {
+            } else if (event.getDamager() instanceof Projectile
+                    && ((Projectile) event.getDamager()).getShooter() instanceof Player) {
                 player = (Player) ((Projectile) event.getDamager()).getShooter();
             } else {
                 return;
